mall/base/mall-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-gateway
  template:
    metadata:
      labels:
        app: mall-gateway
    spec:
      containers:
        - name: mall-gateway
          image: mall-gateway-image-placeholder
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mall-gateway
spec:
  selector:
    app: mall-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
