mall/base/mall-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mall-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mall-mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-mysql
spec:
  selector:
    matchLabels:
      app: mall-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mall-mysql
    spec:
      containers:
        - name: mall-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mall-mysql-storage
              mountPath: /var/lib/mysql
            - name: mall-mysql-config
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: mall-mysql-storage
          persistentVolumeClaim:
            claimName: mall-mysql-pvc
        - name: mall-mysql-config
          configMap:
            name: mall-mysql-config
