mall/base/mall-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-product
  template:
    metadata:
      labels:
        app: mall-product
    spec:
      containers:
        - name: mall-product
          image: lishuaidev/mall-product:81c00c5cce926731bda00c800d75860ac5b1ab2f-dev
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 600
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 600
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mall-product
spec:
  selector:
    app: mall-product
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
